--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(Xarajlt_Project)
+project(xarajlt_game)
 
 if(NOT CMAKE_BUILD_TYPE)
      set(CMAKE_BUILD_TYPE Release)
